--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
 body{
     margin:0;
     padding:0;
-}
-h1{
     text-align: center;
     font-family: monospace;
+}
+h1{
     font-size: 40px;
+    margin-bottom: 30px;
+}
+h3{
+    font-size: 15px;
     margin-bottom: 30px;
 }
 #stage{
